--- a/pages/_index.scss
+++ b/pages/_index.scss
@@ -690,9 +690,9 @@ $dark-color: #191d28;
           height: 330px;
         }
 
-        // .text {
-        //   width: 300px;
-        // }
+        .text {
+          width: 300px;
+        }
       }
     }
   }
