--- a/pages/_blog.scss
+++ b/pages/_blog.scss
@@ -278,7 +278,7 @@ $dark-color: #191d28;
 
             span {
               position: absolute;
-              right: 0;
+              left: 0;
               height: 100%;
               top: 0;
               width: 50px;
