--- a/pages/_index.scss
+++ b/pages/_index.scss
@@ -639,7 +639,7 @@ $dark-color: #191d28;
       .text {
         position: absolute;
         bottom: 0;
-        right: 0;
+        left: 0;
         background-color: #eceeff99;
         padding: 20px;
         width: 90%;
